--- a/themes/lyon-theme/layout/home.ejs
+++ b/themes/lyon-theme/layout/home.ejs
@@ -12,7 +12,7 @@
     </h1>
     <h2>Worldwide. Since 1967.</h2>
   </div>
-  <div tabindex="0" class="learn-more u-button" onclick="smoothScroll('concept');">
+  <div tabindex="0" class="learn-more u-button" onclick="smoothScroll('network-numbers');">
     Learn more<br>
     <svg viewBox="0 0 32 32" width="16" height="16" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
       <path d="M30 12 L16 24 2 12" />
