--- a/themes/lyon-theme/layout/pages/contact.ejs
+++ b/themes/lyon-theme/layout/pages/contact.ejs
@@ -19,7 +19,7 @@
 <section class="u-center bg-image bg-gradient-1">
   <img src="/assets/images/jewc-16-keynote.jpeg">
   <div class="container">
-    <form accept-charset="UTF-8" action="https://usebasin.com/f/7923bbb4b05a" enctype="multipart/form-data" method="POST">
+    <form target="_blank" accept-charset="UTF-8" action="https://usebasin.com/f/7923bbb4b05a" enctype="multipart/form-data" method="POST">
       <div class="row">
         <input class="card" type="text" id="name" name="name" placeholder="Name" required>
       </div>
