--- a/themes/lyon-theme/layout/pages/start-a-je.ejs
+++ b/themes/lyon-theme/layout/pages/start-a-je.ejs
@@ -23,11 +23,11 @@
   <div class="deck">
     <div class="one-half column cta container bg-gray">
       <p>Are you a student or university staff member that wants to create a JE? We can help you!</p>
-      <div tabindex="0" onclick="openFormModal('students-form');" class="purple button" target="_blank">Start your JE today</div>
+      <div tabindex="0" onclick="openFormModal('students-form');" class="purple button">Start your JE today</div>
     </div>
     <div class="one-half column cta container bg-gray">
       <p>Are you an organization that wants to stimulate the creation of JEs in a certain country or region?</p>
-      <div tabindex="0" onclick="openFormModal('orgs-form');" class="purple button" target="_blank">Partner with us</div>
+      <div tabindex="0" onclick="openFormModal('orgs-form');" class="purple button">Partner with us</div>
     </div>
   </div>
 </div></section>
@@ -97,11 +97,11 @@
     <div class="deck">
       <div class="one-half column cta container bg-gray">
         <p>Students and university staff</p>
-        <div tabindex="0" onclick="openFormModal('students-form');" class="purple button" target="_blank">Start your JE today</div>
+        <div tabindex="0" onclick="openFormModal('students-form');" class="purple button">Start your JE today</div>
       </div>
       <div class="one-half column cta container bg-gray">
         <p>Companies and organizations</p>=
-        <div tabindex="0" onclick="openFormModal('orgs-form');" class="purple button" target="_blank">Partner with us</div>
+        <div tabindex="0" onclick="openFormModal('orgs-form');" class="purple button">Partner with us</div>
       </div>
     </div>
   </section>
