--- a/themes/lyon-theme/source/assets/styles.css
+++ b/themes/lyon-theme/source/assets/styles.css
@@ -243,6 +243,7 @@ input.card, textarea.card {
     width: 100%;
     height: 100%;
     overflow: auto;
+    color: #fff;
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.9);
 }
