--- a/themes/lyon-theme/layout/pages/start-a-je.ejs
+++ b/themes/lyon-theme/layout/pages/start-a-je.ejs
@@ -100,7 +100,7 @@
         <div tabindex="0" onclick="openFormModal('students-form');" class="purple button">Start your JE today</div>
       </div>
       <div class="one-half column cta container bg-gray">
-        <p>Companies and organizations</p>=
+        <p>Companies and organizations</p>
         <div tabindex="0" onclick="openFormModal('orgs-form');" class="purple button">Partner with us</div>
       </div>
     </div>
