--- a/themes/lyon-theme/layout/layout.ejs
+++ b/themes/lyon-theme/layout/layout.ejs
@@ -72,8 +72,8 @@
         <div class="container">
           <p class="close" onclick="closeModal('students-form');">&times;</p>
           <p>Hello there!</p>
-          <p>Whether you're an university student, faculty or staff member, we're excited to have you interested in creating a JE in your institution of higher education.</p>
-          <p>Fill this form to be contacted by one of our Enlargement Managers, who will help you in founding a JE!</p>
+          <p>We're excited to help you create a JE in your institution of higher education.</p>
+          <p>Fill this form to be contacted by one of our Enlargement Managers!</p>
           <div class="container"><form target="_blank" accept-charset="UTF-8" action="https://usebasin.com/f/7923bbb4b05a" enctype="multipart/form-data" method="POST">
             <div class="row">
               <input class="card" type="text" id="name" name="name" placeholder="Name" required>
@@ -96,8 +96,8 @@
         <div class="container">
           <p class="close" onclick="closeModal('orgs-form');">&times;</p>
           <p>Hello there!</p>
-          <p>We are excited to partner with your organization. Together, we can write the next chapters of the Junior Enterprise Network.</p>
-          <p>Fill this form to be contacted by one of our Managers to schedule a meeting.</p>
+          <p>We are excited to partner with your organization. Together, we can write the next chapters of the JE Network.</p>
+          <p>Fill this form to be contacted by one of our Managers!</p>
           <div class="container"><form target="_blank" accept-charset="UTF-8" action="https://usebasin.com/f/7923bbb4b05a" enctype="multipart/form-data" method="POST">
             <div class="row">
               <input class="card" type="text" id="name" name="name" placeholder="Name" required>
