--- a/themes/lyon-theme/layout/layout.ejs
+++ b/themes/lyon-theme/layout/layout.ejs
@@ -97,7 +97,7 @@
           <p class="close" onclick="closeModal('orgs-form');">&times;</p>
           <p>Hello there!</p>
           <p>We are excited to partner with your organization. Together, we can write the next chapters of the JE Network.</p>
-          <p>Fill this form to be contacted by one of our Managers!</p>
+          <p>Fill this form for us to contact you to schedule a meeting!</p>
           <div class="container"><form target="_blank" accept-charset="UTF-8" action="https://usebasin.com/f/7923bbb4b05a" enctype="multipart/form-data" method="POST">
             <div class="row">
               <input class="card" type="text" id="name" name="name" placeholder="Name" required>
