--- a/themes/lyon-theme/layout/layout.ejs
+++ b/themes/lyon-theme/layout/layout.ejs
@@ -82,7 +82,7 @@
               <input class="card" type="email" id="email" name="email" placeholder="Email Address" required>
             </div>
             <div class="row">
-              <textarea class="card" rows="4" name="comment" placeholder="Tell us a little about yourself. What's your university? Your role? Your field of study?" required></textarea>
+              <textarea class="card" rows="5" name="comment" placeholder="Tell us a little about yourself. What's your university? Your role? Your field of study?" required></textarea>
             </div>
             <div class="row">
               <div class="g-recaptcha" data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy"></div>
@@ -96,7 +96,7 @@
         <div class="container">
           <p class="close" onclick="closeModal('orgs-form');">&times;</p>
           <p>Hello there!</p>
-          <p>We are excited to partner with your organization. Together, we can write the next chapters of the JE Network.</p>
+          <p>We are excited to partner with your organization. Together, we can write the next chapters in the history of the JE Network.</p>
           <p>Fill this form for us to contact you to schedule a meeting!</p>
           <div class="container"><form target="_blank" accept-charset="UTF-8" action="https://usebasin.com/f/7923bbb4b05a" enctype="multipart/form-data" method="POST">
             <div class="row">
@@ -106,7 +106,7 @@
               <input class="card" type="email" id="email" name="email" placeholder="Email Address" required>
             </div>
             <div class="row">
-              <textarea class="card" rows="4" name="comment" placeholder="Tell us a little about your organization. What's it called? What is your role? And what are you looking for in a partnership?" required></textarea>
+              <textarea class="card" rows="5" name="comment" placeholder="Tell us a little about your organization. What's it called? What is your role? And what are you looking for in a partnership?" required></textarea>
             </div>
             <div class="row">
               <div class="g-recaptcha" data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy"></div>
