--- a/themes/lyon-theme/layout/pages/start-a-je.ejs
+++ b/themes/lyon-theme/layout/pages/start-a-je.ejs
@@ -10,12 +10,12 @@
     <span class="extra-larger">And go on a Journey</span>
     <span class="larger"><br>of Growth & Impact</span>
   </h3>
-  <div tabindex="0" class="learn-more u-button" onclick="smoothScroll('top-cta');">
+  <button class="learn-more" onclick="smoothScroll('top-cta');">
     Learn More<br>
     <svg viewBox="0 0 32 32" width="16" height="16" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
       <path d="M30 12 L16 24 2 12" />
     </svg>
-  </div>
+  </button>
 </section>
 
 <!-- Page Content -->
@@ -23,11 +23,11 @@
   <div class="deck">
     <div class="one-half column cta container bg-gray">
       <p>Are you a student or university staff member that wants to create a JE? We can help you!</p>
-      <div tabindex="0" onclick="openFormModal('students-form');" class="purple button">Start your JE today</div>
+      <button onclick="openFormModal('students-form');" class="purple button">Start your JE today</button>
     </div>
     <div class="one-half column cta container bg-gray">
       <p>Are you an organization that wants to stimulate the creation of JEs in a certain country or region?</p>
-      <div tabindex="0" onclick="openFormModal('orgs-form');" class="purple button">Partner with us</div>
+      <button onclick="openFormModal('orgs-form');" class="purple button">Partner with us</button>
     </div>
   </div>
 </div></section>
@@ -97,11 +97,11 @@
     <div class="deck">
       <div class="one-half column cta container bg-gray">
         <p>Students and university staff</p>
-        <div tabindex="0" onclick="openFormModal('students-form');" class="purple button">Start your JE today</div>
+        <button onclick="openFormModal('students-form');" class="purple button">Start your JE today</button>
       </div>
       <div class="one-half column cta container bg-gray">
         <p>Companies and organizations</p>
-        <div tabindex="0" onclick="openFormModal('orgs-form');" class="purple button">Partner with us</div>
+        <button onclick="openFormModal('orgs-form');" class="purple button">Partner with us</button>
       </div>
     </div>
   </section>
