--- a/themes/lyon-theme/layout/partial/mobile-navigation.ejs
+++ b/themes/lyon-theme/layout/partial/mobile-navigation.ejs
@@ -1,6 +1,6 @@
 <div id="mobileNav">
   <div class="mobile-nav">
-    <p class="close u-button" tabindex="0" role="button" onclick="closeMobileNav();">&times;</p>
+    <p><button class="close" role="button" onclick="closeMobileNav();">&times;</button></p>
     <a href="/">Home</a>
     <p class="cite">Who we are</p>
     <a href="/global-council">Global Council</a>
