--- a/themes/lyon-theme/layout/layout.ejs
+++ b/themes/lyon-theme/layout/layout.ejs
@@ -63,14 +63,14 @@
 
       <div id="video-modal" class="modal u-center">
         <div class="container">
-          <p class="close" onclick="closeModal('video-modal');">&times;</p>
+          <p><button class="close" onclick="closeModal('video-modal');">&times;</button></p>
           <div id="modal-content"></div>
         </div>
       </div>
 
       <div id="students-form" class="modal u-center">
         <div class="container">
-          <p class="close" onclick="closeModal('students-form');">&times;</p>
+          <p><button class="close" onclick="closeModal('students-form');">&times;</button></p>
           <p>Hello there!</p>
           <p>We're excited to help you create a JE in your institution of higher education.</p>
           <p>Fill this form to be contacted by one of our Enlargement Managers!</p>
@@ -94,7 +94,7 @@
 
       <div id="orgs-form" class="modal u-center">
         <div class="container">
-          <p class="close" onclick="closeModal('orgs-form');">&times;</p>
+          <p><button class="close" onclick="closeModal('orgs-form');">&times;</button></p>
           <p>Hello there!</p>
           <p>We are excited to partner with your organization. Together, we can write the next chapters in the history of the JE Network.</p>
           <p>Fill this form for us to contact you to schedule a meeting!</p>
