--- a/themes/lyon-theme/layout/partial/navigation.ejs
+++ b/themes/lyon-theme/layout/partial/navigation.ejs
@@ -39,5 +39,5 @@
       </a>
     </div>
   </nav>
-  <div class="menu button" role="button" tabindex="0" onclick="toggleMobileNav()">Menu</div>
+  <button class="menu button" role="button" tabindex="0" onclick="toggleMobileNav()">Menu</button>
 </div>
