--- a/themes/lyon-theme/source/assets/styles.css
+++ b/themes/lyon-theme/source/assets/styles.css
@@ -42,6 +42,8 @@ html { font: 14px/1.6 'Open Sans', sans-serif; }
 /* Base Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
+button { color: inherit; font: inherit; background: none; border: none; padding: 0; margin: 0; }
+
 body { height: 100%; margin: 0; padding: 0; color: #222; overflow-x: hidden; }
 
 a { color: #1492b8; text-decoration: none; word-wrap: break-word; transition: all .15s ease-in; }
