--- a/themes/lyon-theme/layout/layout.ejs
+++ b/themes/lyon-theme/layout/layout.ejs
@@ -63,6 +63,7 @@
 
       <div id="video-modal" class="modal u-center">
         <div class="container">
+          <div id="video-modal-tab-anchor" tabindex="-1"></div>
           <p><button class="close" onclick="closeModal('video-modal');">&times;</button></p>
           <div id="modal-content"></div>
         </div>
@@ -70,6 +71,7 @@
 
       <div id="students-form" class="modal u-center">
         <div class="container">
+          <div id="students-form-tab-anchor" tabindex="-1"></div>
           <p><button class="close" onclick="closeModal('students-form');">&times;</button></p>
           <p>Hello there!</p>
           <p>We're excited to help you create a JE in your institution of higher education.</p>
@@ -94,6 +96,7 @@
 
       <div id="orgs-form" class="modal u-center">
         <div class="container">
+          <div id="orgs-form-tab-anchor" tabindex="-1"></div>
           <p><button class="close" onclick="closeModal('orgs-form');">&times;</button></p>
           <p>Hello there!</p>
           <p>We are excited to partner with your organization. Together, we can write the next chapters in the history of the JE Network.</p>
