--- a/themes/lyon-theme/layout/partial/mobile-navigation.ejs
+++ b/themes/lyon-theme/layout/partial/mobile-navigation.ejs
@@ -1,5 +1,6 @@
 <div id="mobileNav">
   <div class="mobile-nav">
+    <div id="mobileNav-tab-anchor" tabindex="-1"></div>
     <p><button class="close" role="button" onclick="closeMobileNav();">&times;</button></p>
     <a href="/">Home</a>
     <p class="cite">Who we are</p>
