--- a/themes/lyon-theme/layout/layout.ejs
+++ b/themes/lyon-theme/layout/layout.ejs
@@ -22,24 +22,27 @@
         <%- open_graph({ type: 'article' }) %>
       <% } %>
     <!-- CSS Styles -->
-      <link rel="stylesheet" type="text/css" href="/assets/styles.css">
+      <% if( page.title == 'Map' ){ %>
+        <link rel="stylesheet" type="text/css" href="/assets/map-styles.css">
+      <% } else { %>
+        <link rel="stylesheet" type="text/css" href="/assets/styles.css">
+      <% } %>
       <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Open+Sans:400,400i,700" rel="stylesheet">
     <!-- Scripts -->
-      <script defer src="/assets/scripts.js"></script>
+      <% if( page.title == 'Map' ){ %>
+        <script src="/assets/map-scripts.js"></script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTHGNgA3nZ9AY5dSIhjOdiU-vS7k_iUkw&callback=initMap"></script>
+        <script async defer src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.0.4/fuse.min.js"></script>
+      <% } else { %>
+        <script defer src="/assets/scripts.js"></script>
+      <% } %>
       <% if( page.title == 'Home' ){ %>
         <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
         <script defer src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
       <% } %>
       <% if( page.title == 'Contact' || page.title == 'Start a JE' ){ %>
         <script defer src="https://www.google.com/recaptcha/api.js"></script>
-      <% } %>
-    <!-- Map -->
-      <% if( page.title == 'Map' ){ %>
-        <link rel="stylesheet" type="text/css" href="/assets/map-styles.css">
-        <script src="/assets/map-scripts.js"></script>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTHGNgA3nZ9AY5dSIhjOdiU-vS7k_iUkw&callback=initMap"></script>
-        <script async defer src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.0.4/fuse.min.js"></script>
       <% } %>
     <!-- Favicon -->
       <%- partial('partial/favicon')%>
@@ -60,65 +63,7 @@
 
     <!-- Modals -->
     <% if( page.title == 'Start a JE' ){ %>
-
-      <div id="video-modal" class="modal u-center">
-        <div class="container">
-          <div id="video-modal-tab-anchor" tabindex="-1"></div>
-          <p><button class="close" onclick="closeModal('video-modal');">&times;</button></p>
-          <div id="modal-content"></div>
-        </div>
-      </div>
-
-      <div id="students-form" class="modal u-center">
-        <div class="container">
-          <div id="students-form-tab-anchor" tabindex="-1"></div>
-          <p><button class="close" onclick="closeModal('students-form');">&times;</button></p>
-          <p>Hello there!</p>
-          <p>We're excited to help you create a JE in your institution of higher education.</p>
-          <p>Fill this form to be contacted by one of our Enlargement Managers!</p>
-          <div class="container"><form target="_blank" accept-charset="UTF-8" action="https://usebasin.com/f/7923bbb4b05a" enctype="multipart/form-data" method="POST">
-            <div class="row">
-              <input class="card" type="text" id="name" name="name" placeholder="Name" required>
-            </div>
-            <div class="row">
-              <input class="card" type="email" id="email" name="email" placeholder="Email Address" required>
-            </div>
-            <div class="row">
-              <textarea class="card" rows="5" name="comment" placeholder="Tell us a little about yourself. What's your university? Your role? Your field of study?" required></textarea>
-            </div>
-            <div class="row">
-              <div class="g-recaptcha" data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy"></div>
-            </div>
-            <button class="button" type="submit">Submit</button>
-          </form></div>
-        </div>
-      </div>
-
-      <div id="orgs-form" class="modal u-center">
-        <div class="container">
-          <div id="orgs-form-tab-anchor" tabindex="-1"></div>
-          <p><button class="close" onclick="closeModal('orgs-form');">&times;</button></p>
-          <p>Hello there!</p>
-          <p>We are excited to partner with your organization. Together, we can write the next chapters in the history of the JE Network.</p>
-          <p>Fill this form for us to contact you to schedule a meeting!</p>
-          <div class="container"><form target="_blank" accept-charset="UTF-8" action="https://usebasin.com/f/7923bbb4b05a" enctype="multipart/form-data" method="POST">
-            <div class="row">
-              <input class="card" type="text" id="name" name="name" placeholder="Name" required>
-            </div>
-            <div class="row">
-              <input class="card" type="email" id="email" name="email" placeholder="Email Address" required>
-            </div>
-            <div class="row">
-              <textarea class="card" rows="5" name="comment" placeholder="Tell us a little about your organization. What's it called? What is your role? And what are you looking for in a partnership?" required></textarea>
-            </div>
-            <div class="row">
-              <div class="g-recaptcha" data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy"></div>
-            </div>
-            <button class="button" type="submit">Submit</button>
-          </form></div>
-        </div>
-      </div>
-
+      <%- partial('partial/start-a-je-modals')%>
     <% } %>
 
   </body>
